fixed button spacing bug

--- a/public/css/game_start.css
+++ b/public/css/game_start.css
@@ -27,6 +27,7 @@
 	font-size: 1.5rem; 
 	margin: 2% 2% 0 2%; 
 	cursor: pointer;
+	display: block;
 }
 
 #start-buttons{
