--- a/public/css/howto.css
+++ b/public/css/howto.css
@@ -22,4 +22,5 @@
 }
 #howto{
 	display: none;
+	margin: 4% 0 0 0;
 }
